--- a/src/Taxas.API/Taxas.API.csproj
+++ b/src/Taxas.API/Taxas.API.csproj
@@ -14,16 +14,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="JFRode.SDK" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.6" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.5.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.5.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUi" Version="5.5.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="SDK">
-      <HintPath>..\..\..\SDK\SDK\bin\Debug\netcoreapp3.1\SDK.dll</HintPath>
-    </Reference>
   </ItemGroup>
 </Project>
