--- a/src/Taxas.Data/Taxas.Data.csproj
+++ b/src/Taxas.Data/Taxas.Data.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="JFRode.SDK" Version="1.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.6" />
   </ItemGroup>
 
   <ItemGroup>
