Refatorado Seed para extensão do ModelBuilder

--- a/src/Taxas.API/appsettings.json
+++ b/src/Taxas.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=sqldatabase;Database=TaxasDb;User=sa;Password=SQLTaxas123;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
